Fix desc alignment in the 'test drive' section

--- a/css/index.less
+++ b/css/index.less
@@ -158,12 +158,14 @@ section.get-started {
 
 	.desc-section {
 		.std-xpadding;
-		max-width: 600px;
-		margin-left: auto;
-		margin-right: auto;
 		margin-bottom: 2rem;
+		max-width: 600px;
 
-		@media screen and (min-width: @breakpoint) { margin-bottom: 3.5rem; }
+		@media screen and (min-width: @breakpoint) {
+			margin-left: auto;
+			margin-right: auto;
+			margin-bottom: 3.5rem;
+		}
 	}
 
 	.feature-callout-wrapper {
